<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.genenakagaki.ayudanki.MainActivity">

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="200"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:orderInCategory="10"
        android:title="@string/action_sign_in"
        app:showAsAction="never" />
</menu>
