<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/quiz_name_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_quiz_name_hint"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quiz_name_textinput"
            android:transitionName="@string/transition_name_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/quiz_set_name_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_quiz_set_name_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quiz_set_name_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>